--- a/html/nav_top.html
+++ b/html/nav_top.html
@@ -23,20 +23,14 @@
             <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="#">
                     <i class="fa fa-money mr-2" ></i>
-                    <span>PPM to be approved</span>
+                    <span>Schedule Booker to be verified</span>
                     <span class="float-right">
                         <i class="fa fa-clock-o" ></i> 13 min</span>
                 </a>
                 <a class="dropdown-item" href="#">
                     <i class="fa fa-money mr-2" aria-hidden="true"></i>
-                    <span>PPM to be verified</span>
+                    <span>Schedule Booker to be approved</span>
                     <span class="float-right"><i class="fa fa-clock-o" aria-hidden="true"></i> 33 min</span>
-                </a>
-                <a class="dropdown-item" href="#">
-                    <i class="fa fa-line-chart mr-2" aria-hidden="true"></i>
-                    <span>Work Order to be done</span>
-                    <span class="float-right">
-                        <i class="fa fa-clock-o" aria-hidden="true"></i> 53 min</span>
                 </a>
             </div>
         </li>
