--- a/classroom.html
+++ b/classroom.html
@@ -205,7 +205,7 @@
                                                 <span class="sr-only">Last</span>
                                             </a>
                                         </li>
-                                        <li class="page-item"><a class="page-link">Terakhir</a></li>
+                                        <li class="page-item"><a class="page-link">Last</a></li>
                                     </ul>
                                 </nav>
                             </div>
